# rust-sqs-playground

./: Cargo.toml
src/: main.rs
